...
    colors = TopAppBarDefaults.centerAlignedTopAppBarColors(
      containerColor = TaxiYellow
    ),
    navigationIcon = {
      IconButton(
        modifier = Modifier.semantics(mergeDescendants = true) {
          contentDescription = "toggle_drawer"
        },
        onClick = {
          coroutineScope.launch {
            scaffoldState.drawerState.open()
          }
        }
...
    actions = {
      if (
        currentRoute != Screen.About.routeName
        && currentRoute != Screen.Cart.routeName
      ) {
        IconButton(
          modifier = Modifier.semantics { contentDescription = "cart_page" },
          onClick = { navigation.navigate(Screen.Cart.routeName) }
        ) {
          Icon(
            imageVector = Icons.Default.ShoppingCart,
            tint = Color.Black,
            contentDescription = "cart_page"
...
