...
) {
  Card(
    modifier = modifier
      .height(100.dp)
      .fillMaxWidth()
      .clickable { onPress() }
      .testTag("cart_item"),
    shape = RoundedCornerShape(5.dp),
    border = BorderStroke(0.2.dp, Color.Black),
    elevation = CardDefaults.cardElevation(5.dp)
  ) {
    Row(
      modifier = modifier
...
            color = TaxiDarkBlue,
            fontWeight = FontWeight.W700,
          )
        }
      }
      IconButton(
        modifier = modifier.testTag("remove_product"),
        onClick = onDelete,
      ) {
        Icon(
          modifier = modifier.size(30.dp),
          imageVector = Icons.Default.Delete,
          contentDescription = "Remove item",
...
