...
    )

    Row(
      verticalAlignment = Alignment.CenterVertically,
      modifier = Modifier
        .semantics(mergeDescendants = true) {
          contentDescription = "about_page"
        }
        .clickable {
          navigation?.currentBackStackEntry?.destination?.route?.let { screenName ->
            if (screenName != Screen.About.routeName) {
              navigation.navigate(Screen.About.routeName)
            }
...
