...
          LazyVerticalGrid(
            columns = GridCells.Adaptive(160.dp),
            contentPadding = PaddingValues(16.dp),
            horizontalArrangement = Arrangement.spacedBy(10.dp),
            verticalArrangement = Arrangement.spacedBy(10.dp),
            modifier = modifier.semantics(mergeDescendants = true) {
              contentDescription = "product_list"
            }
          ) {
            items(uiStateValue.data) { productData ->
              Product(
                name = productData.name,
                imgUrl = productData.images[0],
...
